# winzy-get-the-file

./: README.md  pyproject.toml
tests/: test_winzy_get_the_file.py
winzy_get_the_file/: __init__.py  app.py
