[project]
name = "winzy-get-the-file"
version = "0.0.1"
description = "Get files from a folder "
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-get-the-file"
Changelog = "https://github.com/sukhbinder/winzy-get-the-file/releases"
Issues = "https://github.com/sukhbinder/winzy-get-the-file/issues"
CI = "https://github.com/sukhbinder/winzy-get-the-file/actions"

[project.entry-points."winzy.plugins"]
gtf = "winzy_get_the_file:gtf_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
